@@ -9,7 +9,7 @@
 # the same distribution terms as the rest of that program.
 #
 # Generated by gnulib-tool.
-# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=gnulib/lib --m4-base=gnulib/m4 --doc-base=doc --aux-dir=tools --no-libtool --macro-prefix=gl atexit canonicalize dirname error fnmatch-gnu getopt glob memcmp mkdtemp mkstemp regex rename setenv strcspn strsep sys_select xalloc xgetcwd xstrndup
+# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=gnulib/lib --m4-base=gnulib/m4 --doc-base=doc --aux-dir=tools --no-libtool --macro-prefix=gl atexit canonicalize dirname error fnmatch-gnu getopt glob memcmp mkdtemp mkstemp regex rename setenv strcspn strerror strsep sys_select xalloc xgetcwd xstrndup
 
 AUTOMAKE_OPTIONS = 1.5 gnits
 
@@ -584,6 +584,15 @@ EXTRA_DIST += strdup.c
 EXTRA_libgnu_a_SOURCES += strdup.c
 
 ## end   gnulib module strdup
+
+## begin gnulib module strerror
+
+
+EXTRA_DIST += strerror.c
+
+EXTRA_libgnu_a_SOURCES += strerror.c
+
+## end   gnulib module strerror
 
 ## begin gnulib module string
 
