@@ -1,3 +1,10 @@
+Wed Oct 17 22:22:25 BST 2007  Colin Watson  <cjwatson@debian.org>
+
+	* gnulib/lib/strerror.c, gnulib/m4/strerror.m4: Import the Gnulib
+	  strerror module.
+
+	Regenerate all build system files.
+
 Wed Oct 17 21:05:50 BST 2007  Colin Watson  <cjwatson@debian.org>
 
 	Use the Gnulib portability library.
